--- a/index.html
+++ b/index.html
@@ -36,12 +36,18 @@
       </div>
 
       <address class="address header__address">
-        <a href="tel:+70000000">+7(000)000-00-00</a>
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
         <br />
-        <a href="mailto:mail@example.com">mail@example.com</a>
+        <a href="info@sobaka.ge">info@sobaka.ge</a>
         <br />
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,
+        <br />
+        Амстердам
       </address>
     </header>
+
+    <main class="content">
+      <section class="cover"></section>
+    </main>
   </body>
 </html>
