--- a/index.html
+++ b/index.html
@@ -1,53 +1,64 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item-no-bullit">
-            <a href="#" class="header__link header__link_active">главная</a>
-          </li>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
 
-          <li class="header__links-list-item">
-            <a href="#" class="header__link">посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="#" class="header__link">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item-no-bullit">
+          <a href="#" class="header__link header__link_active">главная</a>
+        </li>
 
-      <div class="logo header__logo">
-        <img
-          src="./images/logo-black.svg"
-          alt="logo"
-          class="header__logo-image"
-        />
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="logo header__logo">
+      <img src="" alt="logo" class="header__logo-image" />
+    </div>
+
+    <address class="address header__address">
+      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <br />
+      <a href="info@sobaka.ge">info@sobaka.ge</a>
+      <br />
+      наб. Принсенграхт 263-265,
+      <br />
+      Амстердам
+    </address>
+  </header>
+
+  <main class="content">
+    <section class="cover">
+      <div class="cover__overlay">
+        <h1 class="cover__title"><span class="aligned-text">оно</span><span class="aligned-text_center">тебе</span><span
+            class="aligned-text_right">надо</span></h1>
+
+
+
+        <div class="cover__description">
+          <button class="cover__button">Сделать ставку</button>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+
+        </div>
       </div>
+    </section>
+  </main>
+</body>
 
-      <address class="address header__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-        <br />
-        <a href="info@sobaka.ge">info@sobaka.ge</a>
-        <br />
-        наб. Принсенграхт 263-265,
-        <br />
-        Амстердам
-      </address>
-    </header>
-
-    <main class="content">
-      <section class="cover"></section>
-    </main>
-  </body>
 </html>
