--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="logo header__logo">
-      <img src="" alt="logo" class="header__logo-image" />
+      <img src="./images/logo-black.svg" alt="logo" class="header__logo-image" />
     </div>
 
     <address class="address header__address">
@@ -56,6 +56,63 @@
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
 
         </div>
+      </div>
+    </section>
+
+    <section class="lots">
+
+      <h2 class="lots__heading">лоты</h2>
+      <div class="lots__card-list">
+        <article class="lots__card-list-item card_type_film">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-heading">Фильм режиссёра, который бросил киношколу</h3>
+            <p class="lots__card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
+              не знали, что режиссёр — Пол Томас Андерсон?</p>
+
+
+          </a>
+        </article>
+
+        <article class="lots__card-list-item card_type_book">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-heading">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <p class="lots__card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+              древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с
+              античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+              Джеймса Джойса?</p>
+
+
+          </a>
+        </article>
+        <article class="lots__card-list-item card_type_picture">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-heading">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="lots__card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+              инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что
+              это — одна из революционных работ Кандинского?</p>
+
+
+          </a>
+        </article>
+
+        <article class="lots__card-list-item card_type_picture">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-heading">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="lots__card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+              инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что
+              это — одна из революционных работ Кандинского?</p>
+
+
+          </a>
+        </article>
+
+
+
+
+
+
+
+
       </div>
     </section>
   </main>
