--- a/index.html
+++ b/index.html
@@ -1,121 +1,179 @@
 <!doctype html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  <link rel="stylesheet" href="./fonts/fonts.css" />
-  <link rel="stylesheet" href="./styles/global.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
-</head>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item-no-bullit">
+            <a href="#" class="header__link header__link_active">главная</a>
+          </li>
 
-<body>
-  <header class="header">
-    <nav class="header__menu">
-      <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item-no-bullit">
-          <a href="#" class="header__link header__link_active">главная</a>
-        </li>
+          <li class="header__links-list-item">
+            <a href="#" class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#" class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
 
-        <li class="header__links-list-item">
-          <a href="#" class="header__link">посмотреть лоты</a>
-        </li>
-        <li class="header__links-list-item">
-          <a href="#" class="header__link">об аукционе</a>
-        </li>
-      </ul>
-    </nav>
+      <div class="logo header__logo">
+        <img
+          src="./images/logo-black.svg"
+          alt="logo"
+          class="header__logo-image"
+        />
+      </div>
 
-    <div class="logo header__logo">
-      <img src="./images/logo-black.svg" alt="logo" class="header__logo-image" />
-    </div>
+      <address class="address header__address">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <br />
+        <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <br />
+        наб. Принсенграхт 263-265,
+        <br />
+        Амстердам
+      </address>
+    </header>
 
-    <address class="address header__address">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-      <br />
-      <a href="info@sobaka.ge">info@sobaka.ge</a>
-      <br />
-      наб. Принсенграхт 263-265,
-      <br />
-      Амстердам
-    </address>
-  </header>
+    <main class="content">
+      <section class="cover">
+        <div class="overlay cover__overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">оно</span
+            ><span class="aligned-text_center">тебе</span
+            ><span class="aligned-text_right">надо</span>
+          </h1>
 
-  <main class="content">
-    <section class="cover">
-      <div class="cover__overlay">
-        <h1 class="cover__title"><span class="aligned-text">оно</span><span class="aligned-text_center">тебе</span><span
-            class="aligned-text_right">надо</span></h1>
-
-
-
-        <div class="cover__description">
-          <button class="cover__button">Сделать ставку</button>
-          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-
+          <div class="cover__description">
+            <button class="cover__button">Сделать ставку</button>
+            <p class="cover__description-text">
+              Аукцион вещей, в которые никто не верил
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="lots">
+      <section class="lots">
+        <h2 class="lots__heading">лоты</h2>
+        <div class="lots__card-list">
+          <article class="overlay lots__card-list-item card_type_film">
+            <a href="" class="lots__card-link">
+              <h3 class="lots__card-title">
+                Фильм режиссёра, который бросил киношколу
+              </h3>
+              <p class="lots__card-text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </a>
+          </article>
 
-      <h2 class="lots__heading">лоты</h2>
-      <div class="lots__card-list">
-        <article class="lots__card-list-item card_type_film">
-          <a href="" class="lots__card-link">
-            <h3 class="lots__card-heading">Фильм режиссёра, который бросил киношколу</h3>
-            <p class="lots__card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы
-              не знали, что режиссёр — Пол Томас Андерсон?</p>
+          <article class="overlay lots__card-list-item card_type_book">
+            <a href="" class="lots__card-link">
+              <h3 class="lots__card-title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h3>
+              <p class="lots__card-text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+            </a>
+          </article>
+          <article class="overlay lots__card-list-item card_type_picture">
+            <a href="" class="lots__card-link">
+              <h3 class="lots__card-title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h3>
+              <p class="lots__card-text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков… Сколько бы вы на такое поставили, если бы не знали, что
+                это — одна из революционных работ Кандинского?
+              </p>
+            </a>
+          </article>
+        </div>
+        <a href="#" class="lots__look-more-link">Посмотреть больше </a>
+      </section>
 
+      <section class="about"></section>
 
-          </a>
-        </article>
+      <footer class="footer">
+        <address class="address footer__address">
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <br />
+          <a href="info@sobaka.ge">info@sobaka.ge</a>
+          <br />
+          наб. Принсенграхт 263-265,
+          <br />
+          Амстердам
+        </address>
 
-        <article class="lots__card-list-item card_type_book">
-          <a href="" class="lots__card-link">
-            <h3 class="lots__card-heading">Книга, где описан один скучный день из жизни рекламного агента</h3>
-            <p class="lots__card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
-              древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с
-              античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-              Джеймса Джойса?</p>
+        <nav class="footer__menu">
+          <ul class="footer__links-list">
+            <li
+              class="footer__links-list-item footer__links-list-item-no-bullit"
+            >
+              <a href="#" class="footer__link footer__link_active">главная</a>
+            </li>
 
-
-          </a>
-        </article>
-        <article class="lots__card-list-item card_type_picture">
-          <a href="" class="lots__card-link">
-            <h3 class="lots__card-heading">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="lots__card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-              инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что
-              это — одна из революционных работ Кандинского?</p>
-
-
-          </a>
-        </article>
-
-        <article class="lots__card-list-item card_type_picture">
-          <a href="" class="lots__card-link">
-            <h3 class="lots__card-heading">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="lots__card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-              инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что
-              это — одна из революционных работ Кандинского?</p>
-
-
-          </a>
-        </article>
-
-
-
-
-
-
-
-
-      </div>
-    </section>
-  </main>
-</body>
-
+            <li class="footer__links-list-item">
+              <a href="#" class="footer__link">посмотреть лоты</a>
+            </li>
+            <li class="footer__links-list-item">
+              <a href="#" class="footer__link">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a
+              href="https://vk.com/"
+              class="footer__social-link"
+              target="_blank"
+            >
+              <img src="./images/vk.svg" alt="" class="footer__social-icon" />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a
+              href="https://www.youtube.com/"
+              class="footer__social-link"
+              target="_blank"
+            >
+              <img src="./images/yt.svg" alt="" class="footer__social-icon" />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a
+              href="https://ru.pinterest.com/"
+              class="footer__social-link"
+              target="_blank"
+            >
+              <img
+                src="./images/pinterest.svg"
+                alt=""
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </footer>
+    </main>
+  </body>
 </html>
