--- a/index.html
+++ b/index.html
@@ -1,41 +1,148 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item-no-bullit">
-            <a href="#" class="header__link header__link_active">главная</a>
-          </li>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
 
-          <li class="header__links-list-item">
-            <a href="#" class="header__link">посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="#" class="header__link">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item-no-bullit">
+          <a href="#" class="header__link header__link_active">главная</a>
+        </li>
 
-      <div class="logo header__logo">
-        <img
-          src="./images/logo-black.svg"
-          alt="logo"
-          class="header__logo-image"
-        />
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a href="#" class="header__link">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="logo header__logo">
+      <img src="./images/logo-black.svg" alt="logo" class="header__logo-image" />
+    </div>
+
+    <address class="address header__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <br />
+      <a href="info@sobaka.ge">info@sobaka.ge</a>
+      <br />
+      наб. Принсенграхт 263-265,
+      <br />
+      Амстердам
+    </address>
+  </header>
+
+  <main class="content">
+    <section class="cover">
+      <div class="overlay cover__overlay">
+        <h1 class="cover__title">
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
+          </span>
+
+
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing">о</span></span>
+        </h1>
+
+        <div class="cover__description">
+         
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button type="submit" class="cover__button">cделать ставку</button>
+        </div>
       </div>
+    </section>
 
-      <address class="address header__address">
+    <section class="lots">
+      <h2 class="lots__heading">лоты</h2>
+      <div class="lots__card-list">
+        <article class="overlay lots__card-list-item card_type_film">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-title">
+              Фильм режиссёра, который бросил киношколу
+            </h3>
+            <p class="lots__card-text">
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </p>
+          </a>
+        </article>
+
+        <article class="overlay lots__card-list-item card_type_book">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-title">
+              Книга, где описан один скучный день из жизни рекламного агента
+            </h3>
+            <p class="lots__card-text">
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+              переходами на древнеанглийский. В ней одновременно
+              рассказывается о 16 июня 1904 года и об истории литературы,
+              начиная с античных времён. И это всё накладывается на эпическую
+              поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+              Джойса?
+            </p>
+          </a>
+        </article>
+        <article class="overlay lots__card-list-item card_type_picture">
+          <a href="" class="lots__card-link">
+            <h3 class="lots__card-title">
+              Картина, которую повторит даже 5-летний сын маминой подруги
+            </h3>
+            <p class="lots__card-text">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе
+              что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+              котиков… Сколько бы вы на такое поставили, если бы не знали, что
+              это — одна из революционных работ Кандинского?
+            </p>
+          </a>
+        </article>
+      </div>
+      <a href="#" class="lots__look-more-link">посмотреть больше </a>
+    </section>
+
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo">
+          <img src="./images/logo-white.svg" alt="" class="about__logo-image" />
+        </div>
+        <div class="about__container">
+          <h2 class="about__title">об аукционе</h2>
+          <p class="about__text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+            на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или картина, которую может нарисовать даже ребёнок? Кому нужны все
+            эти странные вещи, созданные любителями?
+          </p>
+
+          <p class="about__text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и
+            непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих
+            лотов невозможно представить современную культуру. Когда в эти
+            вещи не верил никто, продолжали верить их создатели. И сейчас эти
+            лоты стали культовыми.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <address class="address footer__address">
         <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
         <br />
         <a href="info@sobaka.ge">info@sobaka.ge</a>
@@ -44,166 +151,41 @@
         <br />
         Амстердам
       </address>
-    </header>
 
-    <main class="content">
-      <section class="cover">
-        <div class="overlay cover__overlay">
-          <h1 class="cover__title">
-            <span class="aligned-text">оно</span
-            ><span class="aligned-text_center">тебе</span
-            ><span class="aligned-text_right">надо</span>
-          </h1>
-
-          <div class="cover__description">
-            <button class="cover__button">Сделать ставку</button>
-            <p class="cover__description-text">
-              Аукцион вещей, в которые никто не верил
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="lots">
-        <h2 class="lots__heading">лоты</h2>
-        <div class="lots__card-list">
-          <article class="overlay lots__card-list-item card_type_film">
-            <a href="" class="lots__card-link">
-              <h3 class="lots__card-title">
-                Фильм режиссёра, который бросил киношколу
-              </h3>
-              <p class="lots__card-text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
-            </a>
-          </article>
-
-          <article class="overlay lots__card-list-item card_type_book">
-            <a href="" class="lots__card-link">
-              <h3 class="lots__card-title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h3>
-              <p class="lots__card-text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
-            </a>
-          </article>
-          <article class="overlay lots__card-list-item card_type_picture">
-            <a href="" class="lots__card-link">
-              <h3 class="lots__card-title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h3>
-              <p class="lots__card-text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков… Сколько бы вы на такое поставили, если бы не знали, что
-                это — одна из революционных работ Кандинского?
-              </p>
-            </a>
-          </article>
-        </div>
-        <a href="#" class="lots__look-more-link">Посмотреть больше </a>
-      </section>
-
-      <section class="about">
-        <div class="about__column">
-          <div class="about__logo">
-            <img
-              src="./images/logo-white.svg"
-              alt=""
-              class="about__logo-image"
-            />
-          </div>
-          <div class="about__container">
-            <h2 class="about__title">об аукционе</h2>
-            <p class="about__text">
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?
-            </p>
-
-            <p class="about__text">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <footer class="footer">
-        <address class="address footer__address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-          <br />
-          <a href="info@sobaka.ge">info@sobaka.ge</a>
-          <br />
-          наб. Принсенграхт 263-265,
-          <br />
-          Амстердам
-        </address>
-
-        <nav class="footer__menu">
-          <ul class="footer__links-list">
-            <li
-              class="footer__links-list-item footer__links-list-item-no-bullit"
-            >
-              <a href="#" class="footer__link footer__link_active">главная</a>
-            </li>
-
-            <li class="footer__links-list-item">
-              <a href="#" class="footer__link">посмотреть лоты</a>
-            </li>
-            <li class="footer__links-list-item">
-              <a href="#" class="footer__link">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a
-              href="https://vk.com/"
-              class="footer__social-link"
-              target="_blank"
-            >
-              <img src="./images/vk.svg" alt="" class="footer__social-icon" />
-            </a>
+      <nav class="footer__menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item footer__links-list-item-no-bullit">
+            <a href="#" class="footer__link footer__link_active">главная</a>
           </li>
-          <li class="footer__social-list-item">
-            <a
-              href="https://www.youtube.com/"
-              class="footer__social-link"
-              target="_blank"
-            >
-              <img src="./images/yt.svg" alt="" class="footer__social-icon" />
-            </a>
+
+          <li class="footer__links-list-item">
+            <a href="#" class="footer__link">посмотреть лоты</a>
           </li>
-          <li class="footer__social-list-item">
-            <a
-              href="https://ru.pinterest.com/"
-              class="footer__social-link"
-              target="_blank"
-            >
-              <img
-                src="./images/pinterest.svg"
-                alt=""
-                class="footer__social-icon"
-              />
-            </a>
+          <li class="footer__links-list-item">
+            <a href="#" class="footer__link">об аукционе</a>
           </li>
         </ul>
-      </footer>
-    </main>
-  </body>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
+            <img src="./images/yt.svg" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="https://vk.com/" class="footer__social-link" target="_blank">
+            <img src="./images/vk.svg" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+
+        <li class="footer__social-list-item">
+          <a href="https://ru.pinterest.com/" class="footer__social-link" target="_blank">
+            <img src="./images/pinterest.svg" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </main>
+</body>
+
 </html>
