--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </ul>
     </nav>
 
-    <div class="logo header__logo">
+    <a href="#" class="logo header__logo">
       <img src="./images/logo-black.svg" alt="logo" class="header__logo-image" />
-    </div>
+    </a>
 
     <address class="address header__address">
       <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -51,13 +51,11 @@
           <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
           </span>
 
-
           <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span
               class="no-letter-spacing">о</span></span>
         </h1>
 
         <div class="cover__description">
-         
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
@@ -142,14 +140,13 @@
     </section>
 
     <footer class="footer">
-      <address class="address footer__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-        <br />
-        <a href="info@sobaka.ge">info@sobaka.ge</a>
-        <br />
-        наб. Принсенграхт 263-265,
-        <br />
-        Амстердам
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <br />
+      <a href="info@sobaka.ge">info@sobaka.ge</a>
+      <br />
+      наб. Принсенграхт 263-265,
+      <br />
+      Амстердам
       </address>
 
       <nav class="footer__menu">
