--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     </section>
 
     <footer class="footer">
+    <address class="address footer__address">
       <a href="tel:+99995555555">+9 999 555 5555</a>
       <br />
       <a href="info@sobaka.ge">info@sobaka.ge</a>
@@ -147,7 +148,7 @@
       наб. Принсенграхт 263-265,
       <br />
       Амстердам
-      </address>
+    </address>
 
       <nav class="footer__menu">
         <ul class="footer__links-list">
