--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <a href="#" class="logo header__logo">
-      <img src="./images/logo-black.svg" alt="logo" class="header__logo-image" />
+      <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-image" />
     </a>
 
     <address class="address header__address">
@@ -114,7 +114,7 @@
     <section class="about">
       <div class="about__column">
         <div class="about__logo">
-          <img src="./images/logo-white.svg" alt="" class="about__logo-image" />
+          <img src="./images/logo-white.svg" alt="Логотип" class="about__logo-image" />
         </div>
         <div class="about__container">
           <h2 class="about__title">об аукционе</h2>
@@ -140,15 +140,16 @@
     </section>
 
     <footer class="footer">
-    <address class="address footer__address">
-      <a href="tel:+99995555555">+9 999 555 5555</a>
-      <br />
-      <a href="info@sobaka.ge">info@sobaka.ge</a>
-      <br />
-      наб. Принсенграхт 263-265,
-      <br />
-      Амстердам
-    </address>
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br />
+        наб. Принсенграхт 263-265,
+        <br />
+        Амстердам
+      </address>
+
 
       <nav class="footer__menu">
         <ul class="footer__links-list">
@@ -167,18 +168,18 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
-            <img src="./images/yt.svg" alt="" class="footer__social-icon" />
+            <img src="./images/yt.svg" alt="Иконка ютуба" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="https://vk.com/" class="footer__social-link" target="_blank">
-            <img src="./images/vk.svg" alt="" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="Иконка вконтакте" class="footer__social-icon" />
           </a>
         </li>
 
         <li class="footer__social-list-item">
           <a href="https://ru.pinterest.com/" class="footer__social-link" target="_blank">
-            <img src="./images/pinterest.svg" alt="" class="footer__social-icon" />
+            <img src="./images/pinterest.svg" alt="Иконта пинтереста" class="footer__social-icon" />
           </a>
         </li>
       </ul>
