--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <nav class="header__menu">
       <ul class="header__links-list">
         <li class="header__links-list-item header__links-list-item-no-bullit">
-          <a href="#" class="header__link header__link_active">главная</a>
+          <a href="#" class="link header__link header__link_active">главная</a>
         </li>
 
         <li class="header__links-list-item">
-          <a href="#" class="header__link">посмотреть лоты</a>
+          <a href="#" class="link header__link">посмотреть лоты</a>
         </li>
         <li class="header__links-list-item">
-          <a href="#" class="header__link">об аукционе</a>
+          <a href="#" class="link header__link">об аукционе</a>
         </li>
       </ul>
     </nav>
 
-    <a href="#" class="logo header__logo">
+    <a href="#" class="header__logo">
       <img src="./images/logo-black.svg" alt="Логотип" class="header__logo-image" />
     </a>
 
@@ -48,13 +48,12 @@
       <div class="overlay cover__overlay">
         <h1 class="cover__title">
           <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
-          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
+          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span>
           </span>
 
-          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span
               class="no-letter-spacing">о</span></span>
         </h1>
-
         <div class="cover__description">
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
@@ -62,54 +61,53 @@
           <button type="submit" class="cover__button">cделать ставку</button>
         </div>
       </div>
+
+
     </section>
 
     <section class="lots">
       <h2 class="lots__heading">лоты</h2>
       <div class="lots__card-list">
         <article class="overlay lots__card-list-item card_type_film">
-          <a href="" class="lots__card-link">
+          <a href="#" class="lots__card-link">
             <h3 class="lots__card-title">
               Фильм режиссёра, который бросил киношколу
             </h3>
             <p class="lots__card-text">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр —
+              Пол Томас Андерсон?
             </p>
           </a>
         </article>
 
         <article class="overlay lots__card-list-item card_type_book">
-          <a href="" class="lots__card-link">
+          <a href="#" class="lots__card-link">
             <h3 class="lots__card-title">
               Книга, где описан один скучный день из жизни рекламного агента
             </h3>
             <p class="lots__card-text">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно
-              рассказывается о 16 июня 1904 года и об истории литературы,
-              начиная с античных времён. И это всё накладывается на эпическую
-              поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-              Джойса?
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней
+              одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это
+              всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
             </p>
           </a>
         </article>
         <article class="overlay lots__card-list-item card_type_picture">
-          <a href="" class="lots__card-link">
+          <a href="#" class="lots__card-link">
             <h3 class="lots__card-title">
               Картина, которую повторит даже 5-летний сын маминой подруги
             </h3>
             <p class="lots__card-text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе
-              что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-              котиков… Сколько бы вы на такое поставили, если бы не знали, что
-              это — одна из революционных работ Кандинского?
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких
+              полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных
+              работ Кандинского?
             </p>
           </a>
         </article>
       </div>
-      <a href="#" class="lots__look-more-link">посмотреть больше </a>
+      <a href="#" class="link lots__look-more-link">посмотреть больше </a>
     </section>
+
 
     <section class="about">
       <div class="about__column">
@@ -150,36 +148,35 @@
         Амстердам
       </address>
 
-
       <nav class="footer__menu">
         <ul class="footer__links-list">
           <li class="footer__links-list-item footer__links-list-item-no-bullit">
-            <a href="#" class="footer__link footer__link_active">главная</a>
+            <a href="#" class="link footer__link footer__link_active">главная</a>
           </li>
 
           <li class="footer__links-list-item">
-            <a href="#" class="footer__link">посмотреть лоты</a>
+            <a href="#" class="link footer__link">посмотреть лоты</a>
           </li>
           <li class="footer__links-list-item">
-            <a href="#" class="footer__link">об аукционе</a>
+            <a href="#" class="link footer__link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
-            <img src="./images/yt.svg" alt="Иконка ютуба" class="footer__social-icon" />
+            <img src="./images/yt.svg" alt="Иконка youtube" class="footer__social-icon" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="https://vk.com/" class="footer__social-link" target="_blank">
-            <img src="./images/vk.svg" alt="Иконка вконтакте" class="footer__social-icon" />
+            <img src="./images/vk.svg" alt="Иконка VK" class="footer__social-icon" />
           </a>
         </li>
 
         <li class="footer__social-list-item">
           <a href="https://ru.pinterest.com/" class="footer__social-link" target="_blank">
-            <img src="./images/pinterest.svg" alt="Иконта пинтереста" class="footer__social-icon" />
+            <img src="./images/pinterest.svg" alt="Иконка pinterest" class="footer__social-icon" />
           </a>
         </li>
       </ul>
